--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,13 +3,15 @@
 @tailwind utilities;
 
 // @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
   // font-family: 'Montserrat', sans-serif;
-  font-family: 'Source Sans Pro', sans-serif;
+  // font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Roboto', sans-serif;
   &:before{
     content:'';
     content: "";
